Rate and Clicker features!

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,2 @@
-{{page-title "CounterClicker"}}
-
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
-
-{{outlet}}
+<Counter />
+<Upgrades />
