More rate and clicker features

--- a/app/components/upgrades.hbs
+++ b/app/components/upgrades.hbs
@@ -1,1 +1,2 @@
 <button {{on "click" this.incrementIncrementAmount}}>Rate</button><small>{{this.increment.incrementAmount}}</small>
+<button {{on "click" this.startClicker}}>Clicker</button> <small>{{this.multiplier}}/s</small>
